--- a/src/components/common/heroImage/heroImage.css
+++ b/src/components/common/heroImage/heroImage.css
@@ -17,19 +17,18 @@
 
 .hero-text-container {
   position: absolute;
-  width: 100vw;
-  transform: translate(-50%, -300%);
-  text-align: center;
+  transform: translate(-80%, -65%);
+  text-align: left;
 }
 
 #hero-button {
   position: absolute;
-  transform: translate(-50%, -50%);
+  transform: translate(120%, -50%);
   text-transform: capitalize;
   padding: 0.5rem 1rem;
   background-color: background;
 
-  border-radius: 0;
+  border-radius: 20px;
 }
 
 /* MOBILE */
@@ -43,8 +42,8 @@
   }
 
   #hero-title {
-    font-size: 2rem;
-    font-weight: 500;
+    font-size: 3rem;
+    font-weight: 600;
     font-family: "Raleway";
 
     letter-spacing: 1.5vw;
