--- a/src/components/common/heroImage/heroImage.css
+++ b/src/components/common/heroImage/heroImage.css
@@ -23,12 +23,16 @@
 
 #hero-button {
   position: absolute;
-  transform: translate(120%, -50%);
+  /* transform: translate(120%, -50%); */
   text-transform: capitalize;
   padding: 0.5rem 1rem;
   background-color: background;
 
   border-radius: 20px;
+}
+
+#hero-title{
+  font-family: "Lato";
 }
 
 /* MOBILE */
@@ -44,7 +48,6 @@
   #hero-title {
     font-size: 3rem;
     font-weight: 600;
-    font-family: "Raleway";
 
     letter-spacing: 1.5vw;
   }
@@ -80,22 +83,21 @@
   }
 
   #hero-title {
-    font-size: 2rem;
-    font-weight: 500;
-    font-family: "Raleway";
-
-    letter-spacing: 1rem;
+    font-size: 3.5rem;
+    font-weight: 800;
   }
 
   .hero-text-container {
-    top: 92%;
-    left: 50%;
+    top: 55%;
+    left: 21%;
   }
 
   #hero-button {
     top: 85%;
-    left: 50%;
+    left: 40%;
 
-    font-size: 1.5rem;
+    height: 50px;
+    width: 10rem;
+
   }
 }
